Add links to buttons

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 			<h3>tymczasem możesz skorzystać z naszego sklepu stacjonarnego</h3>
 			<div id="address" class="mobile">
 				<p>Kudowa-Zdrój, ul. Zdrojowa 2A</p>
-				<a href="#">Wyznacz trasę w Google Maps</a>
+				<a href="https://www.google.pl/maps/dir//Zdrojowa+2A,+57-350+Kudowa-Zdr%C3%B3j/@50.434788,16.2360692,17z/data=!4m17!1m7!3m6!1s0x470e6f6a552260ff:0xd7d55b98ed8f8ee1!2sZdrojowa+2A,+57-350+Kudowa-Zdr%C3%B3j!3b1!8m2!3d50.434788!4d16.2382579!4m8!1m0!1m5!1m1!1s0x470e6f6a552260ff:0xd7d55b98ed8f8ee1!2m2!1d16.2382579!2d50.434788!3e1">Wyznacz trasę w Google Maps</a>
 			</div>
         </header>
 		<div id="address">
 			<p>Kudowa-Zdrój, ul. Zdrojowa 2A</p>
-			<a href="#">Wyznacz trasę w Google Maps</a>
+			<a href="https://www.google.pl/maps/dir//Zdrojowa+2A,+57-350+Kudowa-Zdr%C3%B3j/@50.434788,16.2360692,17z/data=!4m17!1m7!3m6!1s0x470e6f6a552260ff:0xd7d55b98ed8f8ee1!2sZdrojowa+2A,+57-350+Kudowa-Zdr%C3%B3j!3b1!8m2!3d50.434788!4d16.2382579!4m8!1m0!1m5!1m1!1s0x470e6f6a552260ff:0xd7d55b98ed8f8ee1!2m2!1d16.2382579!2d50.434788!3e1">Wyznacz trasę w Google Maps</a>
 		</div>
 		<div id="map"></div>
         
